refactor: 딜러 생성을 컨트롤러가 관여 안하게 변경
기존에는 사용자로부터 플레이어 이름을 입력받고, 컨트롤러에서 이 이름
목록에 딜러를 임의로 추가하여 Participants.of()에 전달했다.

즉, 흐름 제어만 맡아야 할 컨트롤러가 게임 참여자 목록에 영향을 주고
있었다.

이 커밋에서는 컨트롤러는 단순히 사용자로부터 입력받은 플레이어 목록만을
Participants.of()에 전달하고, Participants.of() 내부에서 딜러를 생성하여
참여자 목록(딜러 + 플레이어)을 리턴하도록 변경한다.